<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container"
    tools:context=".LicaoDoMal3">

    <LinearLayout style="@style/linear_vertical">

        <TextView
            style="@style/info"
            android:text="@string/info3"/>

        <View style="@style/horizontal_line"></View>

        <TextView
            style="@style/title"
            android:text="@string/title_exp3"/>

        <TextView
            style="@style/topic"
            android:text="@string/you_need" />

        <TextView
            style="@style/subtopic"
            android:text="@string/materials3" />

        <TextView
            style="@style/topic"
            android:text="@string/how_to_make" />

        <TextView
            style="@style/subtopic"
            android:text="@string/todo3" />

        <TextView
            style="@style/topic"
            android:text="@string/result" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ferrofluido"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button style="@style/btn_licao_cumprida" />
            <Button style="@style/btn_inicio" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>