<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container"
    tools:context=".Index">

    <LinearLayout
        style="@style/linear_vertical"
        android:layout_height="wrap_content"
        android:id="@+id/linear_index">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/frasco"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    style="@style/info"
                    android:id="@+id/txt_start"
                    android:text="@string/welcome"/>

                <View style="@style/horizontal_line"></View>

                <TextView
                    style="@style/title"
                    android:text="@string/subtitle_index"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/link"
            android:text="@string/index_exp1"
            android:onClick="irLicao1"/>

        <TextView
            style="@style/link"
            android:text="@string/index_exp2"
            android:onClick="irLicao2"/>

        <TextView
            style="@style/link"
            android:text="@string/index_exp3"
            android:onClick="irLicao3"/>

        <TextView
            style="@style/link"
            android:text="@string/index_exp4"
            android:onClick="irLicao4"/>

        <TextView
            style="@style/link"
            android:text="@string/index_exp5"
            android:onClick="irLicao5"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:onClick="abrirEChat">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBtnMenu"
                    android:src="@drawable/chat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/eChat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:onClick="mostrarCuriosidade">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBtnMenu"
                    android:src="@drawable/atomo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/curiosity"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>